--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
-    "webpack": "~5.65.0"
+    "webpack": "~5.65.0",
+    "webpack-cli": "~4.9.1"
   }
 }
