--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@koa/router": "~10.1.1",
     "axios": "~0.24.0",
     "badge-maker": "~3.3.1",
+    "dotenv": "~14.3.2",
     "koa": "^2.13.4",
+    "md5": "~2.3.0",
     "node-polyfill-webpack-plugin": "~1.1.4"
   },
   "devDependencies": {
